Bug 93468 - Until CSP fully supports paths, we should log a warning if we encounter a source with a path.
Summary: Until CSP fully supports paths, we should log a warning if we encounter a sou...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mike West
URL:
Keywords: WebExposed
Depends on:
Blocks: 93197
  Show dependency treegraph
 
Reported: 2012-08-08 05:35 PDT by Mike West
Modified: 2012-08-08 10:25 PDT (History)
4 users (show)

See Also:


Attachments
Patch (26.12 KB, patch)
2012-08-08 06:25 PDT, Mike West
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mike West 2012-08-08 05:35:16 PDT
`script-src http://example.com/path` is valid in CSP 1.0, but will likely have a different effect in CSP 1.1. As discussed in http://crbug.com/128493, we should log a warning to ensure that developers don't inadvertently rely on the path-ignoring behavior of 1.0.
Comment 1 Mike West 2012-08-08 06:25:51 PDT
Created attachment 157200 [details]
Patch
Comment 2 Mike West 2012-08-08 06:27:20 PDT
The first of potentially several logging additions, now that the refactoring in bug 93205 landed. :)

WDYT, Adam?
Comment 3 Mike West 2012-08-08 08:16:24 PDT
Comment on attachment 157200 [details]
Patch

Ha. That was easy. You're getting lax! :)

CQ?
Comment 4 Adam Barth 2012-08-08 10:01:24 PDT
Comment on attachment 157200 [details]
Patch

nah, you've just learned all my bug-a-boos.
Comment 5 WebKit Review Bot 2012-08-08 10:24:57 PDT
Comment on attachment 157200 [details]
Patch

Clearing flags on attachment: 157200

Committed r125047: <http://trac.webkit.org/changeset/125047>
Comment 6 WebKit Review Bot 2012-08-08 10:25:01 PDT
All reviewed patches have been landed.  Closing bug.