Until CSP fully supports paths, we should log a warning if we encounter a source with a path. https://bugs.webkit.org/show_bug.cgi?id=93468

Patch by Mike West <mkwst@chromium.org> on 2012-08-08
Reviewed by Adam Barth.

Source/WebCore:

CSP 1.0 ignores path components of sources in directives' source lists.
'script-src http://example.com/path/to/directory' is treated exactly the
same as 'script-src http://example.com'. It's likely that this behavior
will change in CSP 1.1, which could break with developers' expectations.
This patch adds a warning when a path is encountered, alerting
developers to the fact that their current source is interpreted
differently than they might expect.

See http://crbug.com/128493 for additional context and discussion.

Tests for this change are covered by updating the existing Content
Security Policy tests to include the new console warnings.

* page/ContentSecurityPolicy.cpp:
(CSPSourceList):
(WebCore::CSPSourceList::CSPSourceList):
    Passing the directive name down into CSPSourceList so that we can
    generate informative error messages.
(WebCore::CSPSourceList::parse):
    Create a 'path' string, pass it into 'parseSource', and use it after
    parsing each source to determine whether a warning should be sent.
(WebCore::CSPSourceList::parseSource):
    Adding a 'path' argument so that we can see whether or not a
    specific source should generate a warning.
(WebCore::CSPDirective::CSPDirective):
    Passing the directive name down into CSPSourceList so that we can
    generate informative error messages.
(WebCore::ContentSecurityPolicy::reportIgnoredPathComponent):
    Generate the new warning message.
(WebCore):
* page/ContentSecurityPolicy.h:

LayoutTests:

* http/tests/security/contentSecurityPolicy/1.1/securitypolicy-allowconnectionto.html:
* http/tests/security/contentSecurityPolicy/1.1/securitypolicy-allowfontfrom.html:
* http/tests/security/contentSecurityPolicy/1.1/securitypolicy-allowframefrom.html:
* http/tests/security/contentSecurityPolicy/1.1/securitypolicy-allowimagefrom.html:
* http/tests/security/contentSecurityPolicy/1.1/securitypolicy-allowmediafrom.html:
* http/tests/security/contentSecurityPolicy/1.1/securitypolicy-allowobjectfrom.html:
* http/tests/security/contentSecurityPolicy/1.1/securitypolicy-allowscriptfrom.html:
* http/tests/security/contentSecurityPolicy/1.1/securitypolicy-allowstylefrom.html:
* http/tests/security/contentSecurityPolicy/1.1/securitypolicy-reporturi.html:
    All of the SecurityPolicy API tests with source lists contained
    sources with a trailing `/`. I've fixed that oversight.
* http/tests/security/contentSecurityPolicy/source-list-parsing-05-expected.txt:
* http/tests/security/contentSecurityPolicy/source-list-parsing-05.html:
* http/tests/security/contentSecurityPolicy/source-list-parsing-06-expected.txt:
* http/tests/security/contentSecurityPolicy/source-list-parsing-06.html:
    Updating the text of the test, and updating them to include the new
    console warnings.

Canonical link: https://commits.webkit.org/111355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125047 268f45cc-cd09-0410-ab3c-d52691b4dbfc